<resources>
    <string name="app_name">Placement Quiz</string>
    <string name="title">Take the Quiz on following Topics :-</string>
    <string name="java">Java</string>
    <string name="c">C</string>
    <string name="dbms">DBMS</string>
    <string name="cn">CN</string>
    <string name="opps">Opps!!</string>
    <string name="GreatWork">Great work.</string>
    <string name="congo">Congratulations !!</string>
    <string name="title_android_trivia_question">Java(%1d/%2d) </string>
    <string name="score" type="id">Score</string>
    <string name="javaScore">Java Score</string>
    <string name="playAgain">Play Again</string>
</resources>
