<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <androidx.constraintlayout.widget.ConstraintLayout


        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FF5722"
        android:backgroundTint="#F44336"
        >

        <Button
            android:id="@+id/cnButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@color/button"
            android:text="@string/cn"
            android:theme="@style/textStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cButton" />

        <Button
            android:id="@+id/javaButton1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#FFEB3B"
            android:text="@string/java"
            android:theme="@style/textStyle"
            app:layout_constraintBottom_toTopOf="@+id/dbmsButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/dbmsButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/button"
            android:text="@string/dbms"
            android:theme="@style/textStyle"
            app:layout_constraintBottom_toTopOf="@+id/cButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/javaButton1" />

        <Button
            android:id="@+id/cButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/button"
            android:text="@string/c"
            android:theme="@style/textStyle"
            app:layout_constraintBottom_toTopOf="@+id/cnButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dbmsButton" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="100dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/title"
            android:textAlignment="center"
            android:textSize="30sp"
            android:theme="@style/textStyle"
            app:layout_constraintBottom_toTopOf="@+id/javaButton1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/title" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>